--- a/less/global.less
+++ b/less/global.less
@@ -38,5 +38,6 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
+  padding-top: 10px;
 }
 
